deployments/hiseas-mgmt-application-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hiseas-dev
  name: hiseas-mgmt-application-dev
  labels:
    app: hiseas-mgmt-application-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hiseas-mgmt-application-dev
  template:
    metadata:
      labels:
        app: hiseas-mgmt-application-dev
    spec:
      containers:
        - name: hiseas-mgmt-application-dev
          image: 10.211.55.11:5566/hiseas-cloud/hiseas-center-iam:v32
          ports:
            - containerPort: 10000
      imagePullSecrets:
        - name: harbor-pass # 确保你已创建了 secret
---
apiVersion: v1
kind: Service
metadata:
  namespace: hiseas-dev
  name: hiseas-mgmt-application-dev
spec:
  selector:
    app: hiseas-mgmt-application-dev
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
  type: ClusterIP # 如果要暴露为 LoadBalancer，可更改为 LoadBalancer
